testsuite/tests/parser/should_fail/all.T

test('pfail001', normal, compile_fail, [''])
test('pfail002', normal, compile_fail, [''])
test('pfail003', normal, compile_fail, [''])
test('pfail004', normal, compile_fail, [''])
test('pfail005', normal, compile_fail, [''])
test('pfail006', normal, compile_fail, [''])
test('pfail007', normal, compile_fail, [''])
test('pfail008', normal, compile_fail, [''])
test('pfail009', normal, compile_fail, [''])
test('pfail010', normal, compile_fail, [''])
test('pfail011', normal, compile_fail, [''])
test('pfail012', normal, compile_fail, [''])
test('pfail013', normal, compile_fail, [''])
test('pfail014', normal, compile_fail, [''])
test('pfail015', normal, compile_fail, [''])
test('pfail016', normal, compile_fail, [''])
test('pfail017', normal, compile_fail, [''])
test('pfail018', normal, compile_fail, [''])
test('pfail019', normal, compile_fail, [''])
test('pfail020', normal, compile_fail, [''])
test('pfail021', normal, compile_fail, [''])
test('pfail022', normal, compile_fail, [''])
test('pfail023', normal, compile_fail, [''])
test('pfail024', normal, compile_fail, [''])
test('pfail025', normal, compile_fail, [''])
test('pfail026', normal, compile_fail, [''])
test('pfail027', normal, compile_fail, [''])
test('pfail028', normal, compile_fail, [''])
test('pfail029', normal, compile_fail, [''])
test('pfail030', normal, compile_fail, [''])
test('pfail031', normal, compile_fail, [''])
test('pfail032', normal, compile_fail, [''])
test('pfail033', normal, compile_fail, [''])
test('pfail034', normal, compile_fail, [''])
test('pfail035', normal, compile_fail, [''])
test('pfail036', normal, compile_fail, [''])
test('pfail037', normal, compile_fail, [''])
test('pfail038', normal, compile_fail, [''])
test('pfail039', normal, compile_fail, [''])
test('pfail040', normal, compile_fail, [''])
test('pfail041', normal, compile_fail, [''])
test('pfail042', normal, compile_fail, [''])
test('pfail043', normal, compile_fail, [''])
test('pfail044', normal, compile_fail, [''])
test('pfail045', normal, compile_fail, [''])
test('pfail046', normal, compile_fail, [''])
test('pfail047', normal, compile_fail, [''])
test('pfail048', normal, compile_fail, [''])
